--- a/app.json
+++ b/app.json
@@ -5,10 +5,10 @@
     "env": {
         "UUID": {
             "description": "v2ray UUID",
-            "value": "c95ef1d4-f3ac-4586-96e9-234a37dda068"        
+            "value": "2a867013-e176-4dc7-9128-4a9bdc340ff1"        
         }
     },
-    "website": "https://yeahwu.com",
+    "website": "https://starts.sh",
     "repository": "https://github.com/yeahwu/v2-heroku",
     "stack": "container"
 }
