--- a/app.json
+++ b/app.json
@@ -9,6 +9,6 @@
         }
     },
     "website": "https://starts.sh",
-    "repository": "https://github.com/yeahwu/v2-heroku",
+    "repository": "https://github.com/zxfandyy/v2-heroku",
     "stack": "container"
 }
